# cpp-webservice

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buildspec.yml  docker-compose.yml
src/: main.cpp
